[FIX] - Removido letter spacing para não pular a linha com os sub menus.

--- a/theme_screw/static/src/css/website_shop.css
+++ b/theme_screw/static/src/css/website_shop.css
@@ -29,7 +29,7 @@
     margin: 38px 0;
 }
 #top_menu {
-    letter-spacing: 2px;
+    /*letter-spacing: 2px;*/
     /*margin-top: 50px;*/
     margin-top: 30px;
 }
